<resources>
    <string name="app_name">Ponto Inteligente</string>
    <string name="google_app_id">br.com.fetranspor.vadeonibus</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="action_settings">Settings</string>
    <string name="pontos_proximos_nao_carregados">There is no bus stop in a 2Km radius</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_maps2">Map</string>
    <string name="title_activity_principal_map">Map</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_test_screen">testScreenActivity</string>
    <string name="google_maps_key" translatable="false">AIzaSyB2SBpintXD1NXCUhXwvcgE5OchOwkXf0E</string>
    <string name="title_activity_resultado_rotas">RoteResultsActivity</string>
    <string name="definir_local_partida">DEFINE STARTING POINT</string>
    <string name="definir_local_destino">DEFINE ENDING POINT</string>
    <string name="linhas">LINES</string>
    <string name="rotas">ROUTES</string>
    <string name="definir_nome_numero_linha">Type the bus number or the bus line</string>
    <string name="definir_locais_partidas_destino">Fill the starting and ending points</string>
    <string name="tempo_viagem_parte1">Less than 1 min</string>
    <string name="tempo_viagem_parte2">of trip</string>
    <string name="de_caminhada"> walking</string>
    <string name="caminhada_de">Walk </string>
    <string name="metros">meters</string>
    <string name="vire_a_direita">Turn right</string>
    <string name="vire_a_esquerda">Turn left</string>
    <string name="siga">Go ahead</string>
    <string name="em">on</string>
    <string name="salvo_nos_favoritos_resultado">Line number saved in Favorites</string>
    <string name="salvo_nos_favoritos_erro">The line number is already saved in Favorites</string>
    <string name="ponto_salvo_nos_favoritos_resultado">Bus point saved in Favorites</string>
    <string name="ponto_salvo_nos_favoritos_erro">The bus point is already saved in Favorites</string>
    <string name="nao_ha_onibus_cadastrado">There is no bus registered for this point</string>
    <string name="titulo_tab_linhas">LINES</string>
    <string name="titulo_tab_pontos">POINTS</string>
    <string name="resultado_busca_por">SEARCH RESULTS FOR \"</string>
    <string name="nenhuma_linha_encontrada">We haven\'t found any line for this search</string>
    <string name="origem">Origin:</string>
    <string name="destino">Destination:</string>
    <string name="nenhuma_rota_encontrada">No route found</string>
    <string name="rota">Route</string>
    <string name="onibus">Bus</string>
    <string name="caminhe">Walk</string>
    <string name="metros_ate">meters until</string>
    <string name="embarque_em">Embark in</string>
    <string name="desembarque_em">Disembark in </string>
    <string name="no_ponto">, in the point</string>
    <string name="localizacao_atual">CURRENT LOCATION</string>
    <string name="update">Vá de Ônibus app update</string>
    <string name="need_update">Your version of Vá de Ônibus app is outdated</string>
    <string name="need_update_button">Update</string>
    <string name="ask_update">A new version of Vá de Ônibus App is available. Do you wish update now?</string>
    <string name="not_now_button">Not now</string>
    <string name="cancel">Canceled</string>
    <string name="denied">Permission denied</string>
    <string name="desable">Location settings disabled.</string>
    <string name="ativar">Activate</string>
    <string name="linha">Line:</string>
    <string name="veiculo">Vehicle:</string>
    <string name="sentido">Direction:</string>
    <string name="data_hora">Date/Time:</string>
    <string name="detalhes">Details</string>
    <string name="onibusPlural">Busses</string>
    <string name="onibus_proximos">Closest Busses</string>
    <string name="favoritos">Favorites</string>
    <string name="avaliar_app">Rate app</string>
    <string name="pol_tica_de_privacidade">Privacy policy</string>
    <string name="termos_de_servi_o">Services terms</string>
    <string name="excluir">Delete</string>
    <string name="excluir_tudo">Delete all</string>
    <string name="favoritar_essa_linha">Mark this line as favorite</string>
    <string name="visualizar_itiner_rio_da_linha">Visualize itinerary of this line</string>
    <string name="favoritar_esse_ponto">Mark this point as favorite</string>
    <string name="visualizar_linhas_desse_ponto">Visualize lines from this point</string>
    <string name="como_chegar">How to get</string>
    <string name="usar_como_local_de_partida">Use as beginning</string>
    <string name="usar_como_local_de_destino">Use as destination</string>
    <string name="buscar_por_pontos_e_esta_es">SEARCH FOR POINTS AND LINES</string>
    <string name="mais_pr_ximos">closest:</string>
    <string name="tentar_novamente">Try again</string>
    <string name="local_de_partida">STARTING POINT</string>
    <string name="local_de_destino">ENDING POINT</string>
    <string name="exibir_resultados">Show Results</string>
    <string name="como_chegar_ao_ponto">HOW TO GET IN BUS POINT</string>
    <string name="resultado_da_busca_por_linhas">RESULT OF SEARCH FOR BUS LINE</string>
    <string name="resultado_da_busca_por_centro">RESULT OF SEARCH FOR CENTER</string>
    <string name="resultado_da_busca_por_rotas">RESULT OF SEARCH FOR ROUTES</string>
    <string name="pular_tutorial">Skip Tutorial</string>
    <string name="buscar_por_linhas_e_rotas">SEARCH FOR LINES AND ROUTES</string>
    <string name="nenhum_nibus_pr_ximo_foi_encontrado">No bus found</string>
    <string name="nenhum_ponto_pr_ximo_foi_encontrado">No bus point found</string>
    <string name="itiner_rio">ITINERARY</string>
    <string name="falha_de_conex_o">Connection failed</string>
    <string name="linhas_favoritas">FAVORITE LINES</string>
    <string name="nenhuma_linha_favorita_cadastrada">No favorite line registered</string>
    <string name="pontos_favoritos">FAVORITE POINTS</string>
    <string name="nenhum_ponto_favorito_cadastrado">No favorite point registered</string>
    <string name="linhas_do_ponto">LINES FROM POINT</string>
    <string name="texto">text</string>
    <string name="vista">INFO</string>
    <string name="rota_1">Route 1</string>
    <string name="consorcio">CONSORTIUM</string>
    <string name="_1_min_de_viagem">1 min of trip</string>
    <string name="deseja_usar_sua_localiza_o_atual">DO YOU WISH TO USE YOUR CURRENT LOCATION?</string>
    <string name="digite_o_endere_o">TYPE THE ADDRESS</string>
    <string name="digite_o_n_mero_ou_o_nome_da_linha">TYPE THE NUMBER OR THE LINE BUS</string>
    <string name="tempo_chegada">arrival time:</string>
    <string name="a_pe">by foot:</string>
    <string name="de_viagem">of trip</string>
    <string name="N_D">N/D</string>
    <string name="entendido">Got it</string>
    <string name="comecar">Start</string>
    <string name="buscando_dados">Searching data...</string>
    <string name="tutorial1">SEARCH FOR NUMBER OF THE LINE, NAME OR ROUTES</string>
    <string name="tutorial2">SEARCH FOR POINTS OR LINES</string>
    <string name="tutorial3">ACCESS YOUR FAVORITES AND OTHERS SETTINGS</string>
    <string name="tutorial4">CHANGE YOUR LOCATION HANDLING THE MARKER</string>
    <string name="tutorial5">SLIDE SEARCH BAR TO RESIZE MAP</string>
    <string name="tutorial6_2">PESQUISE POR ROTAS, SELECIONE O LOCAL DE PARTIDA E DESTINO</string>
    <string name="tutorial6">SEARCH FOR NAME OR NUMBER OF THE LINE</string>
    <string name="skip">SKIP</string>
    <string name="concluido">DONE</string>
    <string name="linhas_desse_ponto">LINES FROM THIS POINT</string>
    <string name="rotas_daqui">ROUTES FROM HERE</string>
    <string name="outras_linhas">OTHER LINES</string>
    <string name="outras_rotas">OTHER ROUTES</string>
    <string name="pesquisar_por_linha">SEARCH FOR LINE</string>
    <string name="exibir_rotas">SHOW ROUTES</string>
    <string name="detalhes_Itinerario_Abrir">Open Details</string>
    <string name="detalhes_Itinerario_Fechar">Close Details</string>
    <string name="inverter_sentido">Reverse Direction</string>
    <string name="clique_para_municipio">Touch to select city</string>
    <string name="buscar_por_linhas">SEARCH FOR LINES</string>
    <string name="clique_para_visualizar">Touch to view details</string>
    <string name="ponto">Bus Stop</string>

</resources>
