<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="43dp"
        android:orientation="vertical"
        android:baselineAligned="false"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:visibility="gone">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:orientation="horizontal"
            android:layout_gravity="center">

            <LinearLayout
                android:layout_width="265dp"
                android:layout_height="wrap_content"
                android:id="@+id/frameLayout2"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/local_de_partida"
                    android:id="@+id/localPartidaLinhasRotas"
                    android:layout_gravity="left|center_vertical"
                    android:textSize="14dp"
                    android:textColor="#002F3F"
                    android:textColorHint="#002F3F"
                    android:padding="10dp"
                    android:onClick="definirlocalpartida"
                    android:scrollHorizontally="false"
                    android:ellipsize="end"
                    android:layout_weight="1"
                    android:maxLines="1"
                    android:singleLine="true"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#009FD6"
                    android:layout_marginRight="15dp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/local_de_destino"
                    android:id="@+id/localDestinoLinhasRotas"
                    android:layout_gravity="left|center_vertical"
                    android:textSize="14dp"
                    android:textColor="#002F3F"
                    android:textColorHint="#002F3F"
                    android:padding="10dp"
                    android:onClick="definirlocaldestino"
                    android:scrollHorizontally="false"
                    android:ellipsize="end"
                    android:layout_weight="1"
                    android:maxLines="1"
                    android:singleLine="true"
                    />
            </LinearLayout>
            <ImageView
                android:layout_width="42dp"
                android:layout_height="42dp"
                android:id="@+id/inverterImageBuscalinhaserotas"
                android:layout_gravity="right|center_vertical"
                android:onClick="InverterPartidaeDestino" />

        </LinearLayout>

        <Button
            android:layout_width="270dp"
            android:layout_height="wrap_content"
            android:text="@string/exibir_rotas"
            android:id="@+id/button"
            android:layout_below="@+id/localDestinoPontosEstacoes"
            android:layout_toRightOf="@+id/textView9"
            android:background="@drawable/cornerborder"
            android:layout_alignRight="@+id/seekBar1"
            android:layout_alignEnd="@+id/seekBar1"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="10dp"
            android:onClick="pesquisarRotas"
            android:layout_marginTop="15dp"/>

    </LinearLayout>

</RelativeLayout>