<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".favoritos.FavoritoActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/color_primaryDark">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="center_horizontal"
            android:background="#2c3e50" >

            <LinearLayout
                android:layout_height="match_parent"
                android:layout_width="75dp"
                android:onClick="voltar" >

                <ImageView
                    android:layout_width="15dp"
                    android:layout_height="20dp"
                    android:id="@+id/imageView13"
                    android:paddingRight="10dp"
                    android:background="@drawable/arrow"
                    android:layout_gravity="left|center_vertical"
                    android:layout_marginLeft="15dp"
                    android:nestedScrollingEnabled="true" />
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/favoritos"
                android:id="@+id/textView"
                android:layout_gravity="center"
                android:textSize="12dp"
                android:textColor="#009FD6" />
        </FrameLayout>


        <com.sothree.slidinguppanel.SlidingUpPanelLayout
            xmlns:sothree="http://schemas.android.com/apk/res-auto"
            android:id="@+id/sliding_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="bottom"
            sothree:umanoPanelHeight="40dp"
            sothree:umanoScrollableView="@+id/list"
            sothree:umanoAnchorPoint="0.5"
            sothree:umanoFadeColor="@android:color/transparent"
            sothree:umanoInitialState="anchored"
            >


            <!-- Linha -->
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="370dp"
                android:orientation="vertical">

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_gravity="center_horizontal"
                    android:background="#009FD6">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/linhas_favoritas"
                        android:id="@+id/linhas_favoritas"
                        android:layout_gravity="left|center_vertical"
                        android:textSize="12dp"
                        android:layout_marginLeft="55dp" />

                    <ImageView
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:id="@+id/imageView14"
                        android:paddingRight="10dp"
                        android:paddingLeft="30dp"
                        android:background="@drawable/bus4"
                        android:layout_gravity="left|center_vertical"
                        android:layout_marginLeft="15dp" />
                </FrameLayout>

                <ListView
                    android:id="@+id/list_linhas_favoritas"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_alignParentBottom="false"
                    android:layout_alignParentTop="false"
                    android:layout_centerVertical="true"
                    android:clickable="true"
                    android:drawSelectorOnTop="false" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/nenhumaLinhaEncontrada"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/nenhumaLinhaEncontradaText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:text="@string/nenhuma_linha_favorita_cadastrada"
                        android:gravity="center"
                        android:textColor="#FFFFFF"
                        android:paddingTop="4dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp"/>

                </LinearLayout>

            </LinearLayout>


            <!-- Ponto -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="370dp"
                android:orientation="vertical">

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_gravity="center_horizontal"
                    android:background="#009FD6">

                    <ImageView
                        android:layout_width="20dp"
                        android:layout_height="25dp"
                        android:id="@+id/imageView4"
                        android:paddingRight="10dp"
                        android:paddingLeft="30dp"
                        android:background="@drawable/pin_bus_station"
                        android:layout_gravity="left|center_vertical"
                        android:layout_marginLeft="15dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/pontos_favoritos"
                        android:id="@+id/textView4"
                        android:layout_gravity="left|center_vertical"
                        android:textSize="12dp"
                        android:layout_marginLeft="55dp" />
                </FrameLayout>

                <ListView
                    android:id="@+id/list_pontos_favoritos"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_alignParentBottom="false"
                    android:layout_alignParentTop="false"
                    android:layout_centerVertical="true"
                    android:clickable="true"
                    android:drawSelectorOnTop="true" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/nenhumPontoEncontrado"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/nenhumPontoEncontradoText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:text="@string/nenhum_ponto_favorito_cadastrado"
                        android:gravity="center"
                        android:textColor="#FFFFFF"
                        android:paddingTop="4dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp"/>

                </LinearLayout>

            </LinearLayout>

           </com.sothree.slidinguppanel.SlidingUpPanelLayout>
    </LinearLayout>

</RelativeLayout>